otus-user/templates/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: dmitrykharchenko95/otus_user:v0.0.6
          ports:
            - containerPort: 8000
              name: user-pod-port
