otus-user/templates/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
    - name: user-service-port
      protocol: TCP
      port: 8000
  type: NodePort
